--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
 
-     /* shadcn ui config */
-     "baseUrl": ".",
-     "paths": {
-       "@/*": [
-         "./src/*"
-       ]
-     },
+    // shadcn ui config
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
 
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -27,8 +27,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
