--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 
 
-VITE_API_BASE_URL="http://localhost:8000"
+# VITE_API_BASE_URL="http://localhost:8000"
+VITE_API_BASE_URL="https://mern-foodcarft-backend.onrender.com"
 
 #AUTH
 VITE_AUTH0_DOMAIN="dev-4b57cx7hunk3h4np.us.auth0.com"
 VITE_AUTH0_CLIENT_ID="yn22pBItE6maehnNp5RDUfgrixZ5dEIw"
+# VITE_AUTH0_REDIRECT_URI="http://localhost:5173/"
 VITE_AUTH0_REDIRECT_URI="http://localhost:5173/"
 
 VITE_AUTH0_AUDIENCE="foodCraft_food_ordering_api"
